--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -19,7 +19,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/submitbtn"
+        android:id="@+id/resetbtn"
         android:layout_width="225dp"
         android:layout_height="56dp"
         android:layout_marginEnd="92dp"
@@ -64,14 +64,14 @@
         app:layout_constraintEnd_toEndOf="@+id/redBackground" />
 
     <EditText
-        android:id="@+id/txtbox_email"
+        android:id="@+id/resetemail"
         android:layout_width="374dp"
         android:layout_height="59dp"
         android:layout_marginBottom="48dp"
         android:background="@drawable/edittext3"
         android:ems="10"
         android:inputType="textEmailAddress"
-        app:layout_constraintBottom_toTopOf="@+id/submitbtn"
+        app:layout_constraintBottom_toTopOf="@+id/resetbtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.486"
         app:layout_constraintStart_toStartOf="parent" />
