--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -95,6 +95,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="100dp"
         android:text="Forgot Password?"
+        android:onClick="Log_To_Forgot"
         android:textAlignment="center"
         android:textColor="#000000"
         android:textSize="15sp"
