--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -120,6 +120,7 @@
         android:layout_marginStart="332dp"
         android:layout_marginBottom="40dp"
         android:backgroundTint="#FFFFFF"
+        android:onClick="Home_To_User"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/user" />
