--- a/app/src/main/res/layout/activity_health_measurements.xml
+++ b/app/src/main/res/layout/activity_health_measurements.xml
@@ -6,6 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".health_measurements">
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="530dp"
+        android:layout_height="648dp"
+        android:layout_marginStart="64dp"
+        android:layout_marginBottom="236dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/healthmeasurement" />
+
 
     <EditText
         android:id="@+id/sugarinput"
