new measurements ui

--- a/app/src/main/res/layout/activity_health_measurements.xml
+++ b/app/src/main/res/layout/activity_health_measurements.xml
@@ -63,6 +63,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginBottom="436dp"
         android:text="Blood Pressure"
+        android:onClick="Health_To_Bloodpressure"
         android:textColor="#000000"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -75,6 +76,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginBottom="376dp"
         android:text="Cholesterol Levels"
+        android:onClick="Health_To_Cholesterol"
         android:textColor="#000000"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -87,6 +89,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginBottom="320dp"
         android:text="Blood Sugar Level"
+        android:onClick="Health_To_Sugar"
         android:textColor="#000000"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -99,6 +102,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginBottom="264dp"
         android:text="Body Temperature"
+        android:onClick="Health_To_Temperature"
         android:textColor="#000000"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -111,6 +115,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginBottom="220dp"
         android:text="Heart Rate"
+        android:onClick="Health_To_Heartrate"
         android:textColor="#000000"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -123,6 +128,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginBottom="168dp"
         android:text="Pulse Rate"
+        android:onClick="Health_To_Pulserate"
         android:textColor="#000000"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -135,6 +141,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginBottom="116dp"
         android:text="Hours of Sleep"
+        android:onClick="Health_To_Sleep"
         android:textColor="#000000"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
